<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Scheduler</string>

    <!-- Math Question & Delay time -->
    <string name="mathematical_question">Mathematical Question</string>
    <string name="first_operand">First Operand</string>
    <string name="second_operand">Second Operand</string>
    <string name="choose_operator">Choose Operator</string>
    <string name="delay_time">Delay time</string>
    <string name="in_seconds">In Seconds</string>
    <string name="calculate">Calculate</string>

    <!-- Location -->
    <string name="location_info">Location Info</string>
    <string name="show_current_location">Show current location</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="format_lat">Latitude: %f</string>
    <string name="format_long">Longitude: %f</string>
    <string name="location_permission_rationale">Location permission is needed for this functionality.</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for this functionality.</string>

    <!-- Tabs -->
    <string name="operations">Operations</string>
    <string name="pending">Pending</string>
    <string name="results">Results</string>

    <!-- Math Engine Service -->
    <string name="label_math_engine_service">Math Engine Service</string>
    <string name="engine_waiting">Waiting for math questions</string>
    <string name="label_scheduling">Scheduling your operation</string>
    <string name="format_pending_finished_operations">There are %d pending operations and %d finished.</string>
    <string name="cancel_all">Cancel All</string>

    <!-- Errors & a11y -->
    <string name="err_division_by_zero">Division by zero is undefined</string>
    <string name="err_operand">Type valid operand</string>
    <string name="err_invalid_delay_time">Invalid delay time</string>
    <string name="err_location_settings">Location settings are inadequate. Fix in Settings.</string>
    <string name="a11y_bullet">Bullet</string>
    <string name="a11y_location">Location Icon</string>

    <!-- Notification Channels -->
    <string name="channel_engine_id" translatable="false">
        com.example.android.scheduler.channel.id.ENGINE
    </string>
    <string name="channel_engine_title" translatable="false">Math Operations</string>
    <string name="channel_engine_desc" translatable="false">
        Notifications about pending and finished math operations.
    </string>
</resources>